--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <header>
-    <img id="profile" src="images/scripted_logo_orange.png">
-    <h1>ScriptEd's Portfolio</h1>
+    <!--<img id="profile" src="">-->
+    <h1>Ashley's Portfolio</h1>
     <ul>
       <li><a class="nav" href="">Home</a></li>
       <li><a class="nav" href="">About</a></li>
@@ -16,8 +16,8 @@
     </ul>
   </header>
   <div class="project">
-    <h2 class="project-title"> <a href="">My First Webpage</a></h2>
-    <p>This is the first project that I made in ScriptEd. I used basic HTML tags.</p>
+    <h2 class="project-title"> <a href="">My Hundreth Webpage</a></h2>
+    <p>This is the hundreth project that I made in ScriptEd. I used basic HTML tags.</p>
     <button>Like</button>
     <p id="like"></p>
   </div>
