--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
   <header>
-    <!--<img id="profile" src="">-->
+    <img id="profile" src="">
     <h1>Ashley's Portfolio</h1>
     <ul>
       <li><a class="nav" href="">Home</a></li>
-      <li><a class="nav" href="">About</a></li>
-      <li><a class="nav" href="">Contact</a></li>
+      <li><a class="nav" href="pages/about.html">About</a></li>
+      <li><a class="nav" href="pages/contact.html">Contact</a></li>
     </ul>
   </header>
   <div class="project">
